# ac

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test-driver.sh  test.sh
docs/: cmake.md  x86asm.md
include/: core.h  function.h  node.h  obj.h  stdarg.h  token.h  utils.h
src/: codegen.cpp  core.cpp  core.hpp  main.cpp  node.cpp  parse.cpp  preprocess.cpp  string.cpp  token.cpp  tokenize.cpp  type.cpp  unicode.cpp  utils.cpp
test/: CMakeLists.txt  arith.c  cast.c  common  constexpr.c  control.c  decl.c  driver.sh  enum.c  function.c  initializer.c  macro.c  pointer.c  pragma-once.c  sizeof.c  struct.c  test.h  typedef.c  unicode.c  unioc.c  usualconv.c  variable.c
